@@ -22,8 +22,8 @@ module Gluon
   autoload :Controller, 'gluon/controller'
   autoload :ERBView, 'gluon/erbview'
   autoload :HTMLEmbeddedView, 'gluon/htmlview'
-  autoload :Memoization, 'gluon/controller'
-  autoload :SingleMemoization, 'gluon/controller'
+  autoload :Memoization, 'gluon/memoize'
+  autoload :SingleMemoization, 'gluon/memoize'
   autoload :Mock, 'gluon/mock'
   autoload :NoLogger, 'gluon/rs'
   autoload :PresentationObject, 'gluon/po'
