@@ -1,3 +1,8 @@
+2009-09-04  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/controller.rb, lib/gluon/memoize.rb,
+	lib/gluon/metainfo.rb: split.
+
 2009-09-03  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/template.rb, run/config.rb: memoization for template
